--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sfxdx-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sergeykorolov.github.io/rick-and-morty/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -29,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +64,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "gh-pages": "^3.1.0"
   }
 }
